Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb: Add additional debug info in case validation test fails

--- a/Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb
+++ b/Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb
@@ -98,7 +98,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing TOV/Polytropic_EOSs_validation.py\n"
+      "Overwriting TOV/Polytropic_EOSs_validation.py\n"
      ]
     }
    ],
@@ -1881,6 +1881,18 @@
     "    print(\"Validation: PASSED!\")\n",
     "else:\n",
     "    print(\"Validation: FAILED!\")\n",
+    "    # https://stackoverflow.com/questions/19120489/compare-two-files-report-difference-in-python\n",
+    "    import difflib\n",
+    "    with open(nrpy_module_file_path, 'r') as trusted:\n",
+    "        with open(validation_file_path, 'r') as new:\n",
+    "            diff = difflib.unified_diff(\n",
+    "                trusted.readlines(),\n",
+    "                new.readlines(),\n",
+    "                fromfile='trusted',\n",
+    "                tofile='new',\n",
+    "            )\n",
+    "            for line in diff:\n",
+    "                sys.stdout.write(line)\n",
     "    sys.exit(1)"
    ]
   },
@@ -2341,7 +2353,7 @@
       "MS1 : DONE after 19 iterations!\n",
       "MS1b: DONE after 19 iterations!\n",
       "MPA1: DONE after 22 iterations!\n",
-      "Finished generating plot data. Time elapsed: 38.93 seconds.\n"
+      "Finished generating plot data. Time elapsed: 45.47 seconds.\n"
      ]
     }
    ],
