Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb: remove bogus error message

--- a/Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb
+++ b/Tutorial-TOV-Piecewise_Polytrope_EOSs.ipynb
@@ -1880,7 +1880,7 @@
     "if filecmp.cmp(nrpy_module_file_path,validation_file_path):\n",
     "    print(\"Validation: PASSED!\")\n",
     "else:\n",
-    "    print(\"Validation: FAILED!\")\n",
+    "    print(\"Validation may have failed. Check for non-whitespace differences below:\")\n",
     "    # https://stackoverflow.com/questions/19120489/compare-two-files-report-difference-in-python\n",
     "    import difflib\n",
     "    with open(nrpy_module_file_path, 'r') as trusted:\n",
@@ -1893,7 +1893,7 @@
     "            )\n",
     "            for line in diff:\n",
     "                sys.stdout.write(line)\n",
-    "    sys.exit(1)"
+    "            print(diff)"
    ]
   },
   {
