GiRaFFE_NRPy: Update Jupyter-to-pdf code blocks.

--- a/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb
@@ -567,11 +567,8 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-GiRaFFE_NRPy-C2P_P2C.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-C2P_P2C.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-C2P_P2C.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-C2P_P2C.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFE_NRPy-C2P_P2C\")"
    ]
   }
  ],
@@ -591,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
