--- a/in_progress/Tutorial-GiRaFFE_NRPy-A2B.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-A2B.ipynb
@@ -594,11 +594,8 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-GiRaFFE_NRPy-A2B.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-A2B.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-A2B.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-A2B.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFE_NRPy-A2B\")"
    ]
   }
  ],
