--- a/in_progress/Tutorial-GiRaFFE_NRPy-BCs.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-BCs.ipynb
@@ -662,11 +662,8 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-GiRaFFE_NRPy-BCs.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-BCs.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-BCs.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-BCs.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFE_NRPy-BCs\")"
    ]
   }
  ],
@@ -686,7 +683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
