--- a/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
+++ b/in_progress/Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb
@@ -582,11 +582,8 @@
     }
    ],
    "source": [
-    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-GiRaFFE_NRPy-Stilde-flux.ipynb\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-Stilde-flux.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-Stilde-flux.tex\n",
-    "!pdflatex -interaction=batchmode Tutorial-GiRaFFE_NRPy-Stilde-flux.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFE_NRPy-Stilde-flux\")"
    ]
   }
  ],
