--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator.ipynb
@@ -297,7 +297,9 @@
     "!pdflatex -interaction=batchmode Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator.tex\n",
     "!pdflatex -interaction=batchmode Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator.tex\n",
     "!pdflatex -interaction=batchmode Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "!rm -f Tut*.out Tut*.aux Tut*.log\n",
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFEfood_NRPy_Aligned_Rotator\")"
    ]
   }
  ],
@@ -317,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
