--- a/in_progress/Tutorial-GiRaFFEfood_NRPy_Exact_Wald.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy_Exact_Wald.ipynb
@@ -355,7 +355,9 @@
     "!pdflatex -interaction=batchmode Tutorial-GiRaFFEfood_NRPy_Exact_Wald.tex\n",
     "!pdflatex -interaction=batchmode Tutorial-GiRaFFEfood_NRPy_Exact_Wald.tex\n",
     "!pdflatex -interaction=batchmode Tutorial-GiRaFFEfood_NRPy_Exact_Wald.tex\n",
-    "!rm -f Tut*.out Tut*.aux Tut*.log"
+    "!rm -f Tut*.out Tut*.aux Tut*.log\n",
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-GiRaFFEfood_NRPy_Exact_Wald\")"
    ]
   }
  ],
@@ -375,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
