--- a/Tutorial-Template_Style_Guide.ipynb
+++ b/Tutorial-Template_Style_Guide.ipynb
@@ -13,22 +13,21 @@
     "  gtag('config', 'UA-59152712-8');\n",
     "</script>\n",
     "\n",
-    "# </title> The NRPy+ Jupyter Tutorial Style Guide / Template\n",
-    "\n",
+    "# The NRPy+ Jupyter Tutorial Style Guide / Template\n",
     "## Authors: Brandon Clark, Zach Etienne, & First Last\n",
-    "### </courtesy_remarks> Formatting improvements courtesy Brandon Clark\n",
+    "### Formatting improvements courtesy Brandon Clark\n",
     "\n",
-    "</warning_message> <font color='red'>**This is a warning message, in red text and bolded, to warn anyone using the module that it is, for example, actively in development, not yet validated, etc. Warning messages are optional.**</font>\n",
+    "<font color='red'>**This is a warning message, in red text and bolded, to warn anyone using the module that it is, for example, actively in development, not yet validated, etc. Warning messages are optional.**</font>\n",
     "\n",
-    "## </brief_abstract> This module implements a template designed by Brandon Clark to be used as a style guide for all tutorial notebooks within NRPy+.\n",
+    "## This module implements a template designed by Brandon Clark to be used as a style guide for all tutorial notebooks within NRPy+.\n",
     "\n",
-    "### </additonal_notes> Items in Markdown code contained within \"</>\" are not included within the output (double click this box to see what I mean). To the run Markdown code simply hit \"Shift + Enter\" or the \"Run\" button above. \n",
+    "### Items in Markdown code contained within \"</>\" are not included within the output (double click this box to see what I mean). To the run Markdown code simply hit \"Shift + Enter\" or the \"Run\" button above. \n",
     "\n",
-    "</validation_notice> <font color='green'>**This text discusses how a module has been validated against other existing code or modules. This text is given a green font color and bolded. See how to bold and make text different colors in the Markdown code.**</font>\n",
+    "<font color='green'>**This text discusses how a module has been validated against other existing code or modules. This text is given a green font color and bolded. See how to bold and make text different colors in the Markdown code.**</font>\n",
     "\n",
     "### </list_source_code> NRPy+ Source Code for this module:\n",
     "1. [Template_Style_Guide.py](../edit/Template_Style_Guide.py); [\\[**tutorial**\\]](Tutorial-Template_Style_Guide.ipynb) </description_here> This is where you would describe what purpose this source code serves in this module. Read how to correctly link to these source code files/tutorial notebooks later in []. \n",
-    "1. </additonal_source_code_links__here>\n",
+    "1. </additional_source_code_links__here>\n",
     "\n",
     "## Introduction:\n",
     "Here you write an introduction that discusses in slight detail the framework of this tutorial notebook. Here you may reference external works or websites on which pieces of your module rely. It is often helpful to include an enumerated algorihtm to highlight this modules processes. Within the algortihm you may refer to where source code is implemeted as a part of this module. </optional>\n",
