cmdline_helper; various Tutorial notebooks: Add (EXEC) and (BENCH) keywords so these can be grepped out

--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -404,7 +404,7 @@
     "        par.set_parval_from_str(\"reference_metric::enable_rfm_precompute\",\"False\") # Reset to False to disable rfm_precompute.\n",
     "        rfm.ref_metric__hatted_quantities()\n",
     "        end = time.time()\n",
-    "        print(\"Finished BSSN symbolic expressions in \"+str(end-start)+\" seconds.\")\n",
+    "        print(\"(BENCH) Finished BSSN symbolic expressions in \"+str(end-start)+\" seconds.\")\n",
     "        # Restore original finite-differencing order:\n",
     "        par.set_parval_from_str(\"finite_difference::FD_CENTDERIVS_ORDER\", FD_order)\n",
     "        # END: GENERATE SYMBOLIC EXPRESSIONS\n",
@@ -469,7 +469,7 @@
     "    #endif\"\"\"],\"\",\n",
     "                        \"#include \\\"rfm_files/rfm_struct__SIMD_inner_read0.h\\\"\\n\"+BSSN_RHSs_string))\n",
     "            end = time.time()\n",
-    "            print(\"Finished BSSN_RHS C codegen (FD_order=\"+str(FD_order)+\",Tmunu=\"+str(enable_stress_energy_source_terms)+\") in \" + str(end - start) + \" seconds.\")\n",
+    "            print(\"(BENCH) Finished BSSN_RHS C codegen (FD_order=\"+str(FD_order)+\",Tmunu=\"+str(enable_stress_energy_source_terms)+\") in \" + str(end - start) + \" seconds.\")\n",
     "\n",
     "        elif(which_expressions == \"Ricci\"):\n",
     "            print(\"Generating C code for Ricci tensor (FD_order=\"+str(FD_order)+\") in \"+par.parval_from_str(\"reference_metric::CoordSystem\")+\" coordinates.\")\n",
@@ -489,7 +489,7 @@
     "    #endif\"\"\"],\"\",\n",
     "                        \"#include \\\"rfm_files/rfm_struct__SIMD_inner_read0.h\\\"\\n\"+Ricci_string))\n",
     "            end = time.time()\n",
-    "            print(\"Finished Ricci C codegen (FD_order=\"+str(FD_order)+\") in \" + str(end - start) + \" seconds.\")\n",
+    "            print(\"(BENCH) Finished Ricci C codegen (FD_order=\"+str(FD_order)+\") in \" + str(end - start) + \" seconds.\")\n",
     "        else:\n",
     "            print(\"Error: unexpected argument, \"+str(which_expressions)+\" to BSSN_RHSs_Ricci__generate_Ccode()\")"
    ]
@@ -562,7 +562,7 @@
     "           [\"cctk_lsh[2]-cctk_nghostzones[2]\",\"cctk_lsh[1]-cctk_nghostzones[1]\",\"cctk_lsh[0]-cctk_nghostzones[0]\"],\n",
     "                               [\"1\",\"1\",\"1\"],[\"#pragma omp parallel for\",\"\",\"\"], \"\", Ham_mom_string))\n",
     "        end = time.time()\n",
-    "        print(\"Finished Hamiltonian & momentum constraint C codegen (FD_order=\"+str(FD_order)+\",Tmunu=\"+str(enable_stress_energy_source_terms)+\") in \" + str(end - start) + \" seconds.\")"
+    "        print(\"(BENCH) Finished Hamiltonian & momentum constraint C codegen (FD_order=\"+str(FD_order)+\",Tmunu=\"+str(enable_stress_energy_source_terms)+\") in \" + str(end - start) + \" seconds.\")"
    ]
   },
   {
@@ -640,7 +640,7 @@
     "                                     \"#include \\\"rfm_files/rfm_struct__read1.h\\\"\"],\"\",\n",
     "                                     \"#include \\\"rfm_files/rfm_struct__read0.h\\\"\\n\"+enforce_gammadet_string))\n",
     "        end = time.time()\n",
-    "        print(\"Finished gamma constraint C codegen (FD_order=\"+str(FD_order)+\") in \" + str(end - start) + \" seconds.\")"
+    "        print(\"(BENCH) Finished gamma constraint C codegen (FD_order=\"+str(FD_order)+\") in \" + str(end - start) + \" seconds.\")"
    ]
   },
   {
@@ -933,7 +933,7 @@
     "        for param in paramslist:\n",
     "            NRPyEnvVars.append(BCk.BaikalETK_C_kernels_codegen_onepart(params=param))\n",
     "\n",
-    "print(\"Finished C kernel codegen for Baikal and BaikalVacuum in \"+str(time.time()-start)+\" seconds.\")"
+    "print(\"(BENCH) Finished C kernel codegen for Baikal and BaikalVacuum in \"+str(time.time()-start)+\" seconds.\")"
    ]
   },
   {
