--- a/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
@@ -1616,7 +1616,7 @@
     "import cmdline_helper as cmd\n",
     "cmd.C_compile(os.path.join(Ccodesdir,\"CurviBC_Playground.c\"), \"CurviBC_Playground\", compile_mode=\"safe\")\n",
     "cmd.Execute(\"CurviBC_Playground\", \"4 4 4 Discrete\", os.path.join(Ccodesdir,\"out4x4x4-Spherical-NGHOSTS4oFD.txt\"))\n",
-    "print(\"Finished this code cell.\")"
+    "print(\"(BENCH) Finished this code cell.\")"
    ]
   },
   {
@@ -1703,7 +1703,7 @@
     "print(\"Running discrete CurviBC_Playground test on Cylindrical data, using NRPy+ CurviBoundaryConditions.CurviBoundaryConditions module.\")\n",
     "cmd.C_compile(os.path.join(Ccodesdir,\"CurviBC_Playground.c\"), \"CurviBC_Playground\")\n",
     "cmd.Execute(\"CurviBC_Playground\", \"4 4 4 Discrete\", os.path.join(Ccodesdir,\"CBCmodule-out4x4x4-Cylindrical-NGHOSTS4oFD.txt\"))\n",
-    "print(\"Finished this code cell.\")\n",
+    "print(\"(BENCH) Finished this code cell.\")\n",
     "\n",
     "print(\"\\n\")\n",
     "\n",
