--- a/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
+++ b/Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb
@@ -292,7 +292,7 @@
     "    with open(os.path.join(Ccodesdir,\"initial_data.h\"),\"w\") as file:\n",
     "        file.write(outC_function_dict[\"initial_data\"])\n",
     "    end = time.time()\n",
-    "    print(\"Finished BL initial data codegen in \"+str(end-start)+\" seconds.\")"
+    "    print(\"(BENCH) Finished BL initial data codegen in \"+str(end-start)+\" seconds.\")"
    ]
   },
   {
@@ -373,7 +373,7 @@
     "par.set_parval_from_str(\"reference_metric::enable_rfm_precompute\",\"False\") # Reset to False to disable rfm_precompute.\n",
     "rfm.ref_metric__hatted_quantities()\n",
     "end = time.time()\n",
-    "print(\"Finished BSSN symbolic expressions in \"+str(end-start)+\" seconds.\")\n",
+    "print(\"(BENCH) Finished BSSN symbolic expressions in \"+str(end-start)+\" seconds.\")\n",
     "\n",
     "def BSSN_RHSs():\n",
     "    print(\"Generating C code for BSSN RHSs in \"+par.parval_from_str(\"reference_metric::CoordSystem\")+\" coordinates.\")\n",
@@ -422,7 +422,7 @@
     "                                  upwindcontrolvec=betaU).replace(\"IDX4\",\"IDX4S\"),\n",
     "        loopopts = loopoptions)\n",
     "    end = time.time()\n",
-    "    print(\"Finished BSSN_RHS C codegen in \" + str(end - start) + \" seconds.\")\n",
+    "    print(\"(BENCH) Finished BSSN_RHS C codegen in \" + str(end - start) + \" seconds.\")\n",
     "    \n",
     "def Ricci():\n",
     "    print(\"Generating C code for Ricci tensor in \"+par.parval_from_str(\"reference_metric::CoordSystem\")+\" coordinates.\")\n",
@@ -451,7 +451,7 @@
     "                                   params=outC_params).replace(\"IDX4\",\"IDX4S\"),\n",
     "        loopopts = loopoptions)\n",
     "    end = time.time()\n",
-    "    print(\"Finished Ricci C codegen in \" + str(end - start) + \" seconds.\")"
+    "    print(\"(BENCH) Finished Ricci C codegen in \" + str(end - start) + \" seconds.\")"
    ]
   },
   {
@@ -487,7 +487,7 @@
     "        loopopts = \"InteriorPoints,Enable_rfm_precompute\")\n",
     "\n",
     "    end = time.time()\n",
-    "    print(\"Finished Hamiltonian C codegen in \" + str(end - start) + \" seconds.\")"
+    "    print(\"(BENCH) Finished Hamiltonian C codegen in \" + str(end - start) + \" seconds.\")"
    ]
   },
   {
@@ -520,7 +520,7 @@
     "    EGC.output_Enforce_Detgammabar_Constraint_Ccode(Ccodesdir,\n",
     "                                                    exprs=enforce_detg_constraint_symb_expressions)\n",
     "    end = time.time()\n",
-    "    print(\"Finished gamma constraint C codegen in \" + str(end - start) + \" seconds.\")"
+    "    print(\"(BENCH) Finished gamma constraint C codegen in \" + str(end - start) + \" seconds.\")"
    ]
   },
   {
@@ -1143,7 +1143,7 @@
     "#     file.write(\"wait\\n\")\n",
     "\n",
     "    \n",
-    "print(\"Finished this code cell.\")"
+    "print(\"(BENCH) Finished this code cell.\")"
    ]
   },
   {
