Update all notebooks with latest EXEC/BENCH keywords added

--- a/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
+++ b/Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb
@@ -1603,12 +1603,12 @@
      "output_type": "stream",
      "text": [
       "Compiling executable...\n",
-      "Executing `gcc -O2 -g -fopenmp CurviBoundaryConditions_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 0.4102339744567871 seconds.\n",
+      "(EXEC): Executing `gcc -O2 -g -fopenmp CurviBoundaryConditions_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
+      "(BENCH): Finished executing in 0.4090449810028076 seconds.\n",
       "Finished compilation.\n",
-      "Executing `taskset -c 0,1,2,3 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.2117781639099121 seconds.\n",
-      "Finished this code cell.\n"
+      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./CurviBC_Playground 4 4 4 Discrete`...\n",
+      "(BENCH): Finished executing in 0.20851969718933105 seconds.\n",
+      "(BENCH) Finished this code cell.\n"
      ]
     }
    ],
@@ -1655,21 +1655,21 @@
       "Wrote to file \"CurviBoundaryConditions_Ccodes/boundary_conditions/EigenCoord_Cart_to_xx.h\"\n",
       "Running discrete CurviBC_Playground test on Spherical data, using NRPy+ CurviBoundaryConditions.CurviBoundaryConditions module.\n",
       "Compiling executable...\n",
-      "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops CurviBoundaryConditions_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 1.013765573501587 seconds.\n",
+      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops CurviBoundaryConditions_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
+      "(BENCH): Finished executing in 0.6097977161407471 seconds.\n",
       "Finished compilation.\n",
-      "Executing `taskset -c 0,1,2,3 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.21175551414489746 seconds.\n",
+      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./CurviBC_Playground 4 4 4 Discrete`...\n",
+      "(BENCH): Finished executing in 0.20775818824768066 seconds.\n",
       "Wrote to file \"CurviBoundaryConditions_Ccodes/boundary_conditions/parity_conditions_symbolic_dot_products.h\"\n",
       "Wrote to file \"CurviBoundaryConditions_Ccodes/boundary_conditions/EigenCoord_Cart_to_xx.h\"\n",
       "Running discrete CurviBC_Playground test on Cylindrical data, using NRPy+ CurviBoundaryConditions.CurviBoundaryConditions module.\n",
       "Compiling executable...\n",
-      "Executing `gcc -Ofast -fopenmp -march=native -funroll-loops CurviBoundaryConditions_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
-      "Finished executing in 1.015016794204712 seconds.\n",
+      "(EXEC): Executing `gcc -Ofast -fopenmp -march=native -funroll-loops CurviBoundaryConditions_Ccodes/CurviBC_Playground.c -o CurviBC_Playground -lm`...\n",
+      "(BENCH): Finished executing in 0.6098928451538086 seconds.\n",
       "Finished compilation.\n",
-      "Executing `taskset -c 0,1,2,3 ./CurviBC_Playground 4 4 4 Discrete`...\n",
-      "Finished executing in 0.21350860595703125 seconds.\n",
-      "Finished this code cell.\n",
+      "(EXEC): Executing `taskset -c 0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15 ./CurviBC_Playground 4 4 4 Discrete`...\n",
+      "(BENCH): Finished executing in 0.20794463157653809 seconds.\n",
+      "(BENCH) Finished this code cell.\n",
       "\n",
       "\n",
       "Spherical boundary condition comparison test between CBC & trusted original SENR code: PASSED\n",
