--- a/Tutorial-Symbolic_Tensor_Rotation.ipynb
+++ b/Tutorial-Symbolic_Tensor_Rotation.ipynb
@@ -210,41 +210,25 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}1\\\\0\\\\1\\end{matrix}\\right]$"
+       "$\\displaystyle \\vec{v}=\\left[\\begin{matrix}1\\\\0\\\\1\\end{matrix}\\right],\\,M=\\left[\\begin{matrix}1 & 2 & 1\\\\0 & 1 & 0\\\\2 & 1 & 2\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "Matrix([\n",
-       "[1],\n",
-       "[0],\n",
-       "[1]])"
+       "<IPython.core.display.Math object>"
       ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}1 & 2 & 1\\\\0 & 1 & 0\\\\2 & 1 & 2\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[1, 2, 1],\n",
-       "[0, 1, 0],\n",
-       "[2, 1, 2]])"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from sympy.matrices import rot_axis1, rot_axis2, rot_axis3\n",
-    "from sympy import pi\n",
+    "from sympy import latex, pi\n",
+    "from IPython.display import Math\n",
     "\n",
     "v, angle = [1, 0, 1], pi/2\n",
     "M = [[1, 2, 1], [0, 1, 0], [2, 1, 2]]\n",
-    "display(Matrix(v), Matrix(M))"
+    "Math('\\\\vec{v}=%s,\\\\,M=%s' % (latex(Matrix(v)), latex(Matrix(M))))"
    ]
   },
   {
@@ -262,44 +246,29 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}1\\\\-1\\\\0\\end{matrix}\\right]$"
+       "$\\displaystyle \\vec{v}'=\\left[\\begin{matrix}1\\\\-1\\\\0\\end{matrix}\\right],\\,M'=\\left[\\begin{matrix}1 & -1 & 2\\\\-2 & 2 & -1\\\\0 & 0 & 1\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "Matrix([\n",
-       "[ 1],\n",
-       "[-1],\n",
-       "[ 0]])"
+       "<IPython.core.display.Math object>"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}1 & -1 & 2\\\\-2 & 2 & -1\\\\0 & 0 & 1\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[ 1, -1,  2],\n",
-       "[-2,  2, -1],\n",
-       "[ 0,  0,  1]])"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# vector rotation about x-axis\n",
     "expected = rot_axis1(-angle) * Matrix(v)\n",
     "received = Matrix(rotate(v, [1, 0, 0], angle))\n",
-    "assert expected == received; display(received)\n",
+    "assert expected == received; v_ = received\n",
     "\n",
     "# matrix rotation about x-axis\n",
     "expected = rot_axis1(-angle) * Matrix(M) * transpose(rot_axis1(-angle))\n",
     "received = Matrix(rotate(M, [1, 0, 0], angle))\n",
-    "assert expected == received; display(received)"
+    "assert expected == received; M_ = received\n",
+    "\n",
+    "Math('\\\\vec{v}\\'=%s,\\\\,M\\'=%s' % (latex(Matrix(v_)), latex(Matrix(M_))))"
    ]
   },
   {
@@ -310,44 +279,29 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}1\\\\0\\\\-1\\end{matrix}\\right]$"
+       "$\\displaystyle \\vec{v}'=\\left[\\begin{matrix}1\\\\0\\\\-1\\end{matrix}\\right],\\,M'=\\left[\\begin{matrix}2 & 1 & -2\\\\0 & 1 & 0\\\\-1 & -2 & 1\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "Matrix([\n",
-       "[ 1],\n",
-       "[ 0],\n",
-       "[-1]])"
+       "<IPython.core.display.Math object>"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}2 & 1 & -2\\\\0 & 1 & 0\\\\-1 & -2 & 1\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[ 2,  1, -2],\n",
-       "[ 0,  1,  0],\n",
-       "[-1, -2,  1]])"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# vector rotation about y-axis\n",
     "expected = rot_axis2(-angle) * Matrix(v)\n",
     "received = Matrix(rotate(v, [0, 1, 0], angle))\n",
-    "assert expected == received; display(received)\n",
+    "assert expected == received; v_ = received\n",
     "\n",
     "# matrix rotation about y-axis\n",
     "expected = rot_axis2(-angle) * Matrix(M) * transpose(rot_axis2(-angle))\n",
     "received = Matrix(rotate(M, [0, 1, 0], angle))\n",
-    "assert expected == received; display(received)"
+    "assert expected == received; M_ = received\n",
+    "\n",
+    "Math('\\\\vec{v}\\'=%s,\\\\,M\\'=%s' % (latex(Matrix(v_)), latex(Matrix(M_))))"
    ]
   },
   {
@@ -358,44 +312,29 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}0\\\\1\\\\1\\end{matrix}\\right]$"
+       "$\\displaystyle \\vec{v}'=\\left[\\begin{matrix}0\\\\1\\\\1\\end{matrix}\\right],\\,M'=\\left[\\begin{matrix}1 & 0 & 0\\\\-2 & 1 & 1\\\\-1 & 2 & 2\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "Matrix([\n",
-       "[0],\n",
-       "[1],\n",
-       "[1]])"
+       "<IPython.core.display.Math object>"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}1 & 0 & 0\\\\-2 & 1 & 1\\\\-1 & 2 & 2\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[ 1, 0, 0],\n",
-       "[-2, 1, 1],\n",
-       "[-1, 2, 2]])"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# vector rotation about z-axis\n",
     "expected = rot_axis3(-angle) * Matrix(v)\n",
     "received = Matrix(rotate(v, [0, 0, 1], angle))\n",
-    "assert expected == received; display(received)\n",
+    "assert expected == received; v_ = received\n",
     "\n",
     "# matrix rotation about z-axis\n",
     "expected = rot_axis3(-angle) * Matrix(M) * transpose(rot_axis3(-angle))\n",
     "received = Matrix(rotate(M, [0, 0, 1], angle))\n",
-    "assert expected == received; display(received)"
+    "assert expected == received; M_ = received\n",
+    "\n",
+    "Math('\\\\vec{v}\\'=%s,\\\\,M\\'=%s' % (latex(Matrix(v_)), latex(Matrix(M_))))"
    ]
   },
   {
@@ -407,7 +346,7 @@
     "## Step 2.b: Verifying Symbolic Tensor Rotation \\[Back to [top](#toc)\\]\n",
     "$$\\label{symtensor}$$\n",
     "\n",
-    "The rotation algorithm does support symbolic rotation using SymPy, as demonstrated below on the 4-vector $v^\\mu$ and the second rank, symmetric tensor $h^{\\mu\\nu}$."
+    "The rotation algorithm does support symbolic rotation, as shown below with the second rank, symmetric tensor $h^{\\mu\\nu}$ rotated about the 4-vector $v^\\mu$."
    ]
   },
   {
@@ -418,41 +357,34 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}vU_{0}\\\\vU_{1}\\\\vU_{2}\\end{matrix}\\right]$"
+       "$\\displaystyle hUU=\\left[\\begin{matrix}hUU_{00} & hUU_{01} & hUU_{02}\\\\hUU_{01} & hUU_{11} & hUU_{12}\\\\hUU_{02} & hUU_{12} & hUU_{22}\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "Matrix([\n",
-       "[vU0],\n",
-       "[vU1],\n",
-       "[vU2]])"
+       "<IPython.core.display.Math object>"
       ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}hUU_{00} & hUU_{01} & hUU_{02}\\\\hUU_{01} & hUU_{11} & hUU_{12}\\\\hUU_{02} & hUU_{12} & hUU_{22}\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[hUU00, hUU01, hUU02],\n",
-       "[hUU01, hUU11, hUU12],\n",
-       "[hUU02, hUU12, hUU22]])"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import indexedexp as ixp\n",
-    "from sympy import simplify\n",
+    "from sympy import symbols, simplify, cse\n",
+    "import indexedexp as ixp # NRPy+: symbolic indexed expressions\n",
     "\n",
-    "vU  = ixp.declarerank1(\"vU\")\n",
-    "hUU = ixp.declarerank2(\"hUU\", \"sym01\")\n",
-    "display(Matrix(vU), Matrix(hUU))"
+    "angle = symbols('theta', real=True)\n",
+    "vU    = ixp.declarerank1(\"vU\")\n",
+    "hUU   = ixp.declarerank2(\"hUU\", \"sym01\")\n",
+    "rotatedhUU, N = rotate(hUU, vU, angle), len(hUU)\n",
+    "\n",
+    "Math('hUU=%s' % latex(Matrix(hUU)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We demonstrate that a completely symbolic rotation applied to the tensor $h^{\\mu\\nu}$ does preserve the index symmetry ($h^{\\mu\\nu}=h^{\\nu\\mu}$)."
    ]
   },
   {
@@ -461,81 +393,19 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}vU_{0}\\\\- vU_{2}\\\\vU_{1}\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[ vU0],\n",
-       "[-vU2],\n",
-       "[ vU1]])"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}hUU_{00} & - hUU_{02} & hUU_{01}\\\\- hUU_{02} & hUU_{22} & - hUU_{12}\\\\hUU_{01} & - hUU_{12} & hUU_{11}\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[ hUU00, -hUU02,  hUU01],\n",
-       "[-hUU02,  hUU22, -hUU12],\n",
-       "[ hUU01, -hUU12,  hUU11]])"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Assertion Passed: rotatedhUU[0][2] == rotatedhUU[2][0]\n",
+      "Assertion Passed: rotatedhUU[1][1] == rotatedhUU[1][1]\n",
+      "Assertion Passed: rotatedhUU[2][0] == rotatedhUU[0][2]\n"
+     ]
     }
    ],
    "source": [
-    "expected = rot_axis1(-angle) * Matrix(vU)\n",
-    "received = simplify(Matrix(rotate(vU, [1, 0, 0], angle)))\n",
-    "assert expected == received; display(received)\n",
-    "\n",
-    "expected = rot_axis1(-angle) * Matrix(hUU) * transpose(rot_axis1(-angle))\n",
-    "received = simplify(Matrix(rotate(hUU, [1, 0, 0], angle)))\n",
-    "assert expected == received; display(received)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We observe that applying a rotation to the tensor $h^{\\mu\\nu}$ and following that rotation by the inverse rotation does preserve the index symmetry."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}hUU_{00} & hUU_{01} & hUU_{02}\\\\hUU_{01} & hUU_{11} & hUU_{12}\\\\hUU_{02} & hUU_{12} & hUU_{22}\\end{matrix}\\right]$"
-      ],
-      "text/plain": [
-       "Matrix([\n",
-       "[hUU00, hUU01, hUU02],\n",
-       "[hUU01, hUU11, hUU12],\n",
-       "[hUU02, hUU12, hUU22]])"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "rot_hUU = rotate(hUU, [1, 0, 0], angle)\n",
-    "inv_hUU = rotate(rot_hUU, [1, 0, 0], -angle)\n",
-    "expected = Matrix(hUU)\n",
-    "# warning: may take some time to simplify matrix\n",
-    "received = simplify(Matrix(inv_hUU))\n",
-    "assert expected == received; display(received)"
+    "for i, j in zip(range(N), reversed(range(N))):\n",
+    "    assert simplify(rotatedhUU[i][j] - rotatedhUU[j][i]) == 0\n",
+    "    print('Assertion Passed: rotatedhUU[{i}][{j}] == rotatedhUU[{j}][{i}]'.format(i=i, j=j))"
    ]
   },
   {
@@ -547,35 +417,31 @@
     "## Step 2.c: Common Subexpression Elimination \\[Back to [top](#toc)\\]\n",
     "$$\\label{cse}$$\n",
     "\n",
-    "If the rotation algorithm is given a symbol for the rotation angle, then the resulting expression will support common subexpression elimination."
+    "If the rotation algorithm is given any symbolic input, then the resulting expression will support common subexpression elimination."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}x_{2} \\left(x_{5} + x_{6}\\right) - x_{4} \\left(- x_{5} - x_{6}\\right) & x_{1} x_{10} - x_{3} x_{9} & x_{1} x_{9} + x_{10} x_{3}\\\\x_{2} \\left(- x_{12} + x_{14}\\right) - x_{4} \\left(x_{12} - x_{14}\\right) & x_{1} x_{24} - x_{23} x_{3} & x_{1} x_{23} + x_{24} x_{3}\\\\x_{2} \\left(x_{25} + x_{26}\\right) - x_{4} \\left(- x_{25} - x_{26}\\right) & x_{1} x_{30} - x_{29} x_{3} & x_{1} x_{29} + x_{3} x_{30}\\end{matrix}\\right]$"
+       "$\\displaystyle \\text{cse}(hUU)=\\left[\\begin{matrix}x_{1} x_{37} + x_{10} x_{41} + x_{3} x_{38} - x_{40} x_{5} & x_{1} x_{40} - x_{10} x_{38} + x_{3} x_{41} + x_{37} x_{5} & x_{1} x_{38} + x_{10} x_{40} - x_{3} x_{37} + x_{41} x_{5}\\\\x_{1} x_{49} + x_{10} x_{53} + x_{3} x_{50} - x_{5} x_{52} & x_{1} x_{52} - x_{10} x_{50} + x_{3} x_{53} + x_{49} x_{5} & x_{1} x_{50} + x_{10} x_{52} - x_{3} x_{49} + x_{5} x_{53}\\\\x_{1} x_{61} + x_{10} x_{65} + x_{3} x_{62} - x_{5} x_{64} & x_{1} x_{64} - x_{10} x_{62} + x_{3} x_{65} + x_{5} x_{61} & x_{1} x_{62} + x_{10} x_{64} - x_{3} x_{61} + x_{5} x_{65}\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "Matrix([\n",
-       "[    x2*(x5 + x6) - x4*(-x5 - x6),  x1*x10 - x3*x9,  x1*x9 + x10*x3],\n",
-       "[x2*(-x12 + x14) - x4*(x12 - x14), x1*x24 - x23*x3, x1*x23 + x24*x3],\n",
-       "[x2*(x25 + x26) - x4*(-x25 - x26), x1*x30 - x29*x3, x1*x29 + x3*x30]])"
+       "<IPython.core.display.Math object>"
       ]
      },
+     "execution_count": 8,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sympy.abc import x\n",
-    "rot_hUU = Matrix(rotate(hUU, [1, 0, 0], x))\n",
-    "from sympy import cse\n",
-    "display(cse(rot_hUU)[1][0])"
+    "cse_rotatedhUU = cse(Matrix(rotatedhUU))[1][0]\n",
+    "Math('\\\\text{cse}(hUU)=%s' % latex(Matrix(cse_rotatedhUU)))"
    ]
   },
   {
@@ -593,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
