Tutorial-Symbolic_Tensor_Rotation.ipynb: fixed issue with indexing

--- a/Tutorial-Symbolic_Tensor_Rotation.ipynb
+++ b/Tutorial-Symbolic_Tensor_Rotation.ipynb
@@ -396,16 +396,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Assertion Passed: rotatedhUU[0][2] == rotatedhUU[2][0]\n",
-      "Assertion Passed: rotatedhUU[1][1] == rotatedhUU[1][1]\n",
-      "Assertion Passed: rotatedhUU[2][0] == rotatedhUU[0][2]\n"
+      "Assertion Passed: rotatedhUU[1][0] == rotatedhUU[0][1]\n",
+      "Assertion Passed: rotatedhUU[2][0] == rotatedhUU[0][2]\n",
+      "Assertion Passed: rotatedhUU[2][1] == rotatedhUU[1][2]\n"
      ]
     }
    ],
    "source": [
-    "for i, j in zip(range(N), reversed(range(N))):\n",
-    "    assert simplify(rotatedhUU[i][j] - rotatedhUU[j][i]) == 0\n",
-    "    print('Assertion Passed: rotatedhUU[{i}][{j}] == rotatedhUU[{j}][{i}]'.format(i=i, j=j))"
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if j >= i: continue\n",
+    "        assert simplify(rotatedhUU[i][j] - rotatedhUU[j][i]) == 0\n",
+    "        print('Assertion Passed: rotatedhUU[{i}][{j}] == rotatedhUU[{j}][{i}]'.format(i=i, j=j))"
    ]
   },
   {
