--- a/Tutorial-Loop_Generation_Cache_Blocking.ipynb
+++ b/Tutorial-Loop_Generation_Cache_Blocking.ipynb
@@ -33,8 +33,8 @@
     "$$\\label{toc}$$\n",
     "\n",
     "1. [Step 1](#generation): Demonstrate Loop Generation\n",
-    "    1. [Step 1a.](#simple): Generate a simple, three-dimensional loop with specified options\n",
-    "    1. [Step 1b.](#arbitrary): Generate a nested loop of arbitrary dimension with exact parameters\n",
+    "    1. [Step 1.a](#simple): Generate a simple, three-dimensional loop with specified options\n",
+    "    1. [Step 1.b](#arbitrary): Generate a nested loop of arbitrary dimension with exact parameters\n",
     "1. [Step 2](#exercise): Exercise (Loop Generation)\n",
     "1. [Step 3](#tiling): Demonstrate Cache Blocking\n",
     "1. [Step 4](#latex_pdf_output): $\\LaTeX$ PDF Output"
@@ -52,6 +52,7 @@
     "In the following section, we demonstrate single and nested loop generation in C using NRPy+.\n",
     "\n",
     "In [loop.py](../edit/loop.py), the following functions are implemented for loop generation:\n",
+    "\n",
     "- ```loop(idx_var, lower_bound, upper_bound, increment, pragma, padding=\"\", interior=\"\", tile_size=\"\")```\n",
     "    + ```idx_var```: index variable for the loop (```idxvar[0]```$\\Rightarrow$ outermost loop, ```idxvar[N - 1]```$\\Rightarrow$ innermost loop)\n",
     "    + ```lower_bound```:&nbsp;&nbsp;&nbsp;lower bound for ```idxvar``` or ```idxvar[i]```\n",
@@ -81,7 +82,7 @@
    "source": [
     "<a id='simple'></a>\n",
     "\n",
-    "# Step 1a:  `simple_loop()` \\[Back to [top](#toc)\\]\n",
+    "## Step 1.a:  `simple_loop()` \\[Back to [top](#toc)\\]\n",
     "$$\\label{simple}$$\n",
     "\n",
     "The `simple_loop()` function will generate a simple loop in C (for use inside of a function) with specified options."
@@ -263,7 +264,7 @@
    "source": [
     "<a id='arbitrary'></a>\n",
     "\n",
-    "# Step 1b:  `loop()` \\[Back to [top](#toc)\\]\n",
+    "## Step 1.b:  `loop()` \\[Back to [top](#toc)\\]\n",
     "$$\\label{arbitrary}$$\n",
     "\n",
     "The `loop()` function will generate a nested loop of arbitrary dimension in C with exact parameters (i.e. more control than `simple_loop()`)."
@@ -323,7 +324,7 @@
     "# Step 2: Exercise (Loop Generation) \\[Back to [top](#toc)\\]\n",
     "$$\\label{exercise}$$\n",
     "\n",
-    "**Goal:** Reproduce the following output using the loop generation infrastructure in NRPy+ ([solution](Tutorial-Loop_Generation_Cache_Blocking-soln.ipynb))\n",
+    "**Goal:** Reproduce the following output using the loop generation infrastructure in NRPy+ ([solution](Tutorial-Loop_Generation_Cache_Blocking_soln.ipynb))\n",
     "\n",
     "```\n",
     "for (int n = 0; n < (Nt - 1); n++) {\n",
@@ -362,7 +363,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -370,7 +373,6 @@
      "text": [
       "// Untiled Loop\n",
       "for (int i = 0; i < N; i++) {\n",
-      "    c[i] = 0;\n",
       "    for (int j = 0; j < N; j++) {\n",
       "        c[i] += a[i][j] * b[j];\n",
       "    } // END LOOP: for (int j = 0; j < N; j++)\n",
@@ -392,9 +394,8 @@
     }
    ],
    "source": [
-    "inner = loop('j', '0', 'N', '1', '', interior='c[i] += a[i][j] * b[j];')\n",
     "print('// Untiled Loop')\n",
-    "print(loop('i', '0', 'N', '1', '', interior=('c[i] = 0;\\n' + inner[:-1])))\n",
+    "print(loop(['i', 'j'], ['0', '0'], ['N', 'N'], ['1', '1'], ['', ''], interior='c[i] += a[i][j] * b[j];'))\n",
     "\n",
     "print('// Tiled Loop\\n#define MIN(x, y) (((x) < (y)) ? (x) : (y))')\n",
     "print(loop(['i', 'j'], ['0', '0'], ['N', 'N'], ['1', '1'], ['', ''], interior='c[i] += a[i][j] * b[j];', tile_size=['2', '2']))"
