--- a/Tutorial-cmdline_helper.ipynb
+++ b/Tutorial-cmdline_helper.ipynb
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing cmdline_helper-validation.py\n"
+      "Overwriting cmdline_helper-validation.py\n"
      ]
     }
    ],
@@ -458,11 +458,13 @@
    "source": [
     "%%writefile -a cmdline_helper-validation.py\n",
     "\n",
-    "def output_Jupyter_notebook_to_LaTeXed_PDF(notebookname,verbose=True):\n",
-    "    Execute_input_string(r\"jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' \"+notebookname+\".ipynb\",verbose=False)\n",
+    "def output_Jupyter_notebook_to_LaTeXed_PDF(notebookname,location_of_template_file=os.path.join(\".\"),verbose=True):\n",
+    "    Execute_input_string(r\"jupyter nbconvert --to latex --template \"\n",
+    "                         +os.path.join(location_of_template_file,\"latex_nrpy_style.tplx\")\n",
+    "                         +r\" --log-level='WARN' \"+notebookname+\".ipynb\",verbose=False)\n",
     "    for i in range(3):\n",
     "        Execute_input_string(r\"pdflatex -interaction=batchmode \"+notebookname+\".tex\",verbose=False)\n",
-    "    delete_existing_files(\"Tut*.out Tut*.aux Tut*.log\")\n",
+    "    delete_existing_files(notebookname+\".out \"+notebookname+\".aux \"+notebookname+\".log\")\n",
     "    if verbose:\n",
     "        print(\"Created \"+notebookname+\".tex, and compiled LaTeX file to PDF file \"+notebookname+\".pdf\")\n"
    ]
