NRPyPN: Add useful variable declarations to NRPyPN_shortcuts

--- a/NRPyPN/PN-Hamiltonian-Nonspinning.ipynb
+++ b/NRPyPN/PN-Hamiltonian-Nonspinning.ipynb
@@ -99,7 +99,7 @@
     "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "from outputC import *            # NRPy+: Core C code output module\n",
-    "from NRPyPNshortcuts import *    # NRPyNR: shortcuts for e.g., vector operations\n",
+    "from NRPyPN_shortcuts import *    # NRPyNR: shortcuts for e.g., vector operations\n",
     "\n",
     "def H_NS_up_to_2PN(m1,m2, pU, nU, q):\n",
     "    mu = m1*m2/(m1+m2)\n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,13 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[NbConvertApp] WARNING | pattern 'Tutorial-Loop_Generation_Cache_Blocking.ipynb' matched no files\n",
       "Created Tutorial-Loop_Generation_Cache_Blocking.tex, and compiled LaTeX file to PDF file Tutorial-Loop_Generation_Cache_Blocking.pdf\n"
      ]
     }
