--- a/NRPyPN/NRPyPN_shortcuts.ipynb
+++ b/NRPyPN/NRPyPN_shortcuts.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "# NRPyPN Shortcuts\n",
     "\n",
-    "## This notebook contains a number of useful shortcuts for constructing post-Newtonian expressions within SymPy\n",
+    "## This notebook contains a number of useful shortcuts for constructing post-Newtonian expressions within NRPyPN/SymPy\n",
     "\n",
     "**Notebook Status:** <font color='orange'><b> Validated through extensive use </b></font>\n",
     "\n",
@@ -36,41 +36,38 @@
     "# Table of Contents\n",
     "$$\\label{toc}$$\n",
     "\n",
-    "1. Part 1: [Vector & arithmetic operations](#vectorops), including dot products (`dot(a,b)`) and cross products (`cross(a,b)`) (including the [Levi-Civita symbol](https://en.wikipedia.org/wiki/Levi-Civita_symbol)); also the shortcut `div(a,b)` to `sp.Rational(a,b)` for rational number `a/b\n",
-    "1. Part 2: [Numerical evaluation of SymPy expressions](#numeval) (`numeval(expr)`)\n",
-    "1. Part 3: [Validate against corresponding Python module](#validate)\n",
-    "1. Part 4: [LaTeX PDF output](#latex_pdf_output): $\\LaTeX$ PDF Output"
+    "1. Part 1: [Declare global variables used as input to PN expressions](#globals)\n",
+    "1. Part 2: [Vector & arithmetic operations](#vectorops), including dot products (`dot(a,b)`) and cross products (`cross(a,b)`) (including the [Levi-Civita symbol](https://en.wikipedia.org/wiki/Levi-Civita_symbol)); also the shortcut `div(a,b)` to `sp.Rational(a,b)` for rational number `a/b\n",
+    "1. Part 3: [Numerical evaluation of SymPy expressions](#numeval) (`numeval(expr)`)\n",
+    "1. Part 4: [Validate against corresponding Python module](#validate)\n",
+    "1. Part 5: [LaTeX PDF output](#latex_pdf_output): $\\LaTeX$ PDF Output"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='vectorops'></a>\n",
+    "<a id='globals'></a>\n",
     "\n",
-    "# Part 1: Vector operations, including dot products (`dot(a,b)`) and cross products (`cross(a,b)`) (including the [Levi-Civita symbol](https://en.wikipedia.org/wiki/Levi-Civita_symbol)); also the shortcut `div(a,b)` to `sp.Rational(a,b)` for rational number `a/b` \\[Back to [top](#toc)\\]\n",
-    "$$\\label{vectorops}$$ \n",
+    "# Part 1: Declare global variables used as input to PN expressions \\[Back to [top](#toc)\\]\n",
+    "$$\\label{globals}$$ \n",
     "\n",
-    "Here we define \n",
-    "* `dot(a,b)`=$\\mathbf{a}\\cdot\\mathbf{b}$, for 3-vectors $\\mathbf{a}$ and $\\mathbf{b}$\n",
-    "* `cross(a,b)`=$\\mathbf{a}\\times\\mathbf{b}$, for 3-vectors $\\mathbf{a}$ and $\\mathbf{b}$\n",
-    "    * ... and the corresponding `define_LeviCivitaSymbol_rank3_dim3()` function, which constructs the [Levi-Civita symbol](https://en.wikipedia.org/wiki/Levi-Civita_symbol) used for cross products\n",
-    "* `div(a,b)`=$a/b$, for integers $a$ and $b$. This is a convenient shortcut for SymPy's `sp.Rational(a,b)` function"
+    "Here, after initializing the module, we define \n",
+    "* `m1` and `m2`, the masses of the point particles. We will require that `m1+m2=1`, using $G=c=1$ units, as all results can be rescaled appropriately with total mass.\n",
+    "* `S1U`=$\\mathbf{S}_1$ and `S2U`=$\\mathbf{S}_2$, the dimensionful spin vectors of the point masses\n",
+    "* `pU`=$\\mathbf{p} = \\mathbf{P}_1/\\mu = -\\mathbf{P}_2/\\mu$, where $\\mathbf{P}_i$ is the momentum vector of mass $i$ with respect to the center of mass, and $\\mu=m_1 m_2 / (m_1+m_2)^2$ is the reduced mass\n",
+    "* `nU`=$(\\mathbf{X}_1-\\mathbf{X}_2)/|\\mathbf{X}_1-\\mathbf{X}_2|$, where $\\mathbf{X}_i$ is the position vector of mass $i$ with respect to the center of mass\n",
+    "* `drdt`=$\\frac{dr}{dt}$, the radial infall rate of the binary system\n",
+    "* `Pt`=$p_t$, `Pr`=$p_r$, the tangential and radial components of the momentum vector for the binary, with respect to its center of mass.\n",
+    "* `r`=`q`=$|\\mathbf{X}_1-\\mathbf{X}_2|$\n",
+    "* `chi1U`=$\\mathbf{\\chi}_1=\\mathbf{S}_1/m_2^2$ and `chi2U`=$\\mathbf{\\chi}_2=\\mathbf{S}_2/m_2^2$, the dimensionless spin vectors of the point masses (each with physically permissible values between -1 and +1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting NRPyPN_shortcuts-validation.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile NRPyPN_shortcuts-validation.py\n",
     "# As documented in the NRPyPN notebook\n",
@@ -97,49 +94,42 @@
     "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
     "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
     "\n",
-    "# Step 1: Define the rank-3 version of the Levi-Civita symbol. Amongst\n",
-    "#         other uses, this is needed for the construction of the approximate \n",
-    "#         quasi-Kinnersley tetrad.\n",
-    "def define_LeviCivitaSymbol_rank3_dim3():\n",
-    "    LeviCivitaSymbol = ixp.zerorank3()\n",
-    "    for i in range(3):\n",
-    "        for j in range(3):\n",
-    "            for k in range(3):\n",
-    "                # From https://codegolf.stackexchange.com/questions/160359/levi-civita-symbol :\n",
-    "                LeviCivitaSymbol[i][j][k] = (i - j) * (j - k) * (k - i) * sp.Rational(1,2)\n",
-    "    return LeviCivitaSymbol\n",
+    "# Step 1: Declare several global variables used throughout\n",
+    "#         NRPyPN\n",
+    "m1,m2 = sp.symbols('m1 m2',real=True)\n",
+    "S1U = ixp.declarerank1(\"S1U\")\n",
+    "S2U = ixp.declarerank1(\"S2U\")\n",
+    "pU = ixp.declarerank1(\"pU\")\n",
+    "nU = ixp.declarerank1(\"nU\")\n",
     "\n",
-    "# Step 2: Define dot and cross product of vectors\n",
-    "def dot(vec1,vec2):\n",
-    "    vec1_dot_vec2 = sp.sympify(0)\n",
-    "    for i in range(3):\n",
-    "        vec1_dot_vec2 += vec1[i]*vec2[i]\n",
-    "    return vec1_dot_vec2\n",
-    "\n",
-    "def cross(vec1,vec2):\n",
-    "    vec1_cross_vec2 = ixp.zerorank1()\n",
-    "    LeviCivitaSymbol = define_LeviCivitaSymbol_rank3_dim3()\n",
-    "    for i in range(3):\n",
-    "        for j in range(3):\n",
-    "            for k in range(3):\n",
-    "                vec1_cross_vec2[i] += LeviCivitaSymbol[i][j][k]*vec1[j]*vec2[k]\n",
-    "    return vec1_cross_vec2\n",
-    "\n",
-    "# Step 3: Construct rational numbers a/b via div(a,b)\n",
-    "def div(a,b):\n",
-    "    return sp.Rational(a,b)"
+    "drdt = sp.symbols('drdt', real=True)\n",
+    "Pt, Pr = sp.symbols('Pt Pr', real=True)\n",
+    "# Some references use r, others use q to represent the \n",
+    "#   distance between the two point masses. This is rather\n",
+    "#   confusing since q is also used to represent the\n",
+    "#   mass ratio m2/m1. However, q is the canonical position\n",
+    "#   variable name in Hamiltonian mechanics, so both are\n",
+    "#   well justified. It should be obvious which is which\n",
+    "#   throughout NRPyPN.\n",
+    "r, q = sp.symbols('r q', real=True)\n",
+    "chi1U = ixp.declarerank1('chi1U')\n",
+    "chi2U = ixp.declarerank1('chi2U')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='numeval'></a>\n",
+    "<a id='vectorops'></a>\n",
     "\n",
-    "# Part 2: `num_eval(expr)`: numerical evaluation of SymPy expressions \\[Back to [top](#toc)\\]\n",
-    "$$\\label{numeval}$$ \n",
+    "# Part 2: Vector operations, including dot products (`dot(a,b)`) and cross products (`cross(a,b)`) (including the [Levi-Civita symbol](https://en.wikipedia.org/wiki/Levi-Civita_symbol)); also the shortcut `div(a,b)` to `sp.Rational(a,b)` for rational number `a/b` \\[Back to [top](#toc)\\]\n",
+    "$$\\label{vectorops}$$ \n",
     "\n",
-    "* `num_eval(expr, qmassratio,nr,nchi1x,nchi1y,nchi1z,nchi2x,nchi2y,nchi2z, nPt=None, ndrdt=None)` numerically evaluates expression `expr` with options to also specify numerical values for the tangential momentum $p_t$ and the radial infall rate $\\frac{dr}{dt}$. Default options evaluate a $q=1$ mass-ratio, nonspinning binary with separation $r=12$."
+    "Here we define \n",
+    "* `dot(a,b)`=$\\mathbf{a}\\cdot\\mathbf{b}$, for 3-vectors $\\mathbf{a}$ and $\\mathbf{b}$\n",
+    "* `cross(a,b)`=$\\mathbf{a}\\times\\mathbf{b}$, for 3-vectors $\\mathbf{a}$ and $\\mathbf{b}$\n",
+    "    * ... and the corresponding `define_LeviCivitaSymbol_rank3_dim3()` function, which constructs the [Levi-Civita symbol](https://en.wikipedia.org/wiki/Levi-Civita_symbol) used for cross products\n",
+    "* `div(a,b)`=$a/b$, for integers $a$ and $b$. This is a convenient shortcut for SymPy's `sp.Rational(a,b)` function"
    ]
   },
   {
@@ -158,7 +148,68 @@
    "source": [
     "%%writefile -a NRPyPN_shortcuts-validation.py\n",
     "\n",
-    "# Step 4: num_eval(expr), a means to numerically evaluate SymPy/NRPyPN\n",
+    "# Step 2.a: Define the rank-3 version of the Levi-Civita symbol. Amongst\n",
+    "#         other uses, this is needed for the construction of the approximate \n",
+    "#         quasi-Kinnersley tetrad.\n",
+    "def define_LeviCivitaSymbol_rank3_dim3():\n",
+    "    LeviCivitaSymbol = ixp.zerorank3()\n",
+    "    for i in range(3):\n",
+    "        for j in range(3):\n",
+    "            for k in range(3):\n",
+    "                # From https://codegolf.stackexchange.com/questions/160359/levi-civita-symbol :\n",
+    "                LeviCivitaSymbol[i][j][k] = (i - j) * (j - k) * (k - i) * sp.Rational(1,2)\n",
+    "    return LeviCivitaSymbol\n",
+    "\n",
+    "# Step 2.b: Define dot and cross product of vectors\n",
+    "def dot(vec1,vec2):\n",
+    "    vec1_dot_vec2 = sp.sympify(0)\n",
+    "    for i in range(3):\n",
+    "        vec1_dot_vec2 += vec1[i]*vec2[i]\n",
+    "    return vec1_dot_vec2\n",
+    "\n",
+    "def cross(vec1,vec2):\n",
+    "    vec1_cross_vec2 = ixp.zerorank1()\n",
+    "    LeviCivitaSymbol = define_LeviCivitaSymbol_rank3_dim3()\n",
+    "    for i in range(3):\n",
+    "        for j in range(3):\n",
+    "            for k in range(3):\n",
+    "                vec1_cross_vec2[i] += LeviCivitaSymbol[i][j][k]*vec1[j]*vec2[k]\n",
+    "    return vec1_cross_vec2\n",
+    "\n",
+    "# Step 2.c: Construct rational numbers a/b via div(a,b)\n",
+    "def div(a,b):\n",
+    "    return sp.Rational(a,b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='numeval'></a>\n",
+    "\n",
+    "# Part 3: `num_eval(expr)`: numerical evaluation of SymPy expressions \\[Back to [top](#toc)\\]\n",
+    "$$\\label{numeval}$$ \n",
+    "\n",
+    "* `num_eval(expr, qmassratio,nr,nchi1x,nchi1y,nchi1z,nchi2x,nchi2y,nchi2z, nPt=None, ndrdt=None)` numerically evaluates expression `expr` with options to also specify numerical values for the tangential momentum $p_t$ and the radial infall rate $\\frac{dr}{dt}$. Default options evaluate a $q=1$ mass-ratio, nonspinning binary with separation $r=12$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to NRPyPN_shortcuts-validation.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile -a NRPyPN_shortcuts-validation.py\n",
+    "\n",
+    "# Step 3: num_eval(expr), a means to numerically evaluate SymPy/NRPyPN\n",
     "#         expressions\n",
     "def num_eval(expr, \n",
     "             qmassratio =  1.0,  # must be >= 1\n",
@@ -208,13 +259,13 @@
    "source": [
     "<a id='validate'></a>\n",
     "\n",
-    "# Part 3: Validate against corresponding Python module \\[Back to [top](#toc)\\]\n",
+    "# Part 4: Validate against corresponding Python module \\[Back to [top](#toc)\\]\n",
     "$$\\label{validate}$$ "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +304,7 @@
    "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Part 5: Output this notebook to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
@@ -262,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
