NRPyPN: PN-Hamiltonian-Spin-Spin now fully validated

--- a/NRPyPN/PN-Hamiltonian-Spin-Orbit.ipynb
+++ b/NRPyPN/PN-Hamiltonian-Spin-Orbit.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "**Notebook Status:** <font color='green'><b> Validated </b></font>\n",
     "\n",
-    "**Validation Notes:** All expressions in this notebook were transcribed twice by hand on separate occasions, and expressions were corrected as needed to ensure consistency with published work. In addition, this tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). **Additional validation tests may have been performed, but are as yet, undocumented.**\n",
+    "**Validation Notes:** All expressions in this notebook were transcribed twice by hand on separate occasions, and expressions were corrected as needed to ensure consistency with published PN expressions. In addition, this tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). **Additional validation tests may have been performed, but are as yet, undocumented.**\n",
     "\n",
     "## Author: Zach Etienne\n",
     "\n",
@@ -875,14 +875,15 @@
     "    print(\"ERROR: When comparing Python module & notebook, \"+varname+\" was found not to match.\")\n",
     "    sys.exit(1)\n",
     "\n",
-    "# Validation against second transcription of the expressions.    \n",
+    "# Validation against second transcription of the expressions:\n",
     "f_H_SO_1p5PNv2(m1,m2, n12U,n21U, S1U, S2U, p1U,p2U, q)\n",
     "f_H_SO_2p5PNv2(m1,m2, n12U,n21U, S1U, S2U, p1U,p2U, q)\n",
     "f_H_SO_3p5PNv2(m1,m2, n12U,n21U, S1U, S2U, p1U,p2U, q)\n",
     "if sp.simplify(H_SO_1p5PN   - H_SO_1p5PNv2)   != 0: error(\"H_SO_1p5PNv2\")\n",
     "if sp.simplify(H_SO_2p5PN   - H_SO_2p5PNv2)   != 0: error(\"H_SO_2p5PNv2\")\n",
     "if sp.simplify(H_SO_3p5PN   - H_SO_3p5PNv2)   != 0: error(\"H_SO_3p5PNv2\")\n",
-    "    \n",
+    "\n",
+    "# Validation against corresponding Python module:\n",
     "import PN_Hamiltonian_SO as HSO\n",
     "HSO.f_H_SO_1p5PN(m1,m2, n12U,n21U, S1U, S2U, p1U,p2U, q)\n",
     "HSO.f_H_SO_2p5PN(m1,m2, n12U,n21U, S1U, S2U, p1U,p2U, q)\n",
