--- a/NRPyPN/PN-Hamiltonian-Nonspinning.ipynb
+++ b/NRPyPN/PN-Hamiltonian-Nonspinning.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "**Notebook Status:** <font color='green'><b> Validated </b></font>\n",
     "\n",
-    "**Validation Notes:** All expressions in this notebook were transcribed twice by hand on separate occasions, and expressions were corrected as needed to ensure consistency with published work. In addition, this tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). **Additional validation tests may have been performed, but are as yet, undocumented.**\n",
+    "**Validation Notes:** All expressions in this notebook were transcribed twice by hand on separate occasions, and expressions were corrected as needed to ensure consistency with published PN expressions. In addition, this tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). **Additional validation tests may have been performed, but are as yet, undocumented.**\n",
     "\n",
     "\n",
     "## Author: Zach Etienne\n",
