--- a/NRPyPN/PN-Hamiltonian-Spin-Spin.ipynb
+++ b/NRPyPN/PN-Hamiltonian-Spin-Spin.ipynb
@@ -17,10 +17,9 @@
     "\n",
     "## This notebook constructs the spin-spin coupling terms in the Hamiltonian up to 3 post-Newtonian order\n",
     "\n",
+    "**Notebook Status:** <font color='green'><b> Validated </b></font>\n",
     "\n",
-    "**Notebook Status:** <font color='orange'><b> Self-validated </b></font>\n",
-    "\n",
-    "**Validation Notes:** This tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). **Additional validation tests may have been performed, but are as yet, undocumented. (TODO)**\n",
+    "**Validation Notes:** All expressions in this notebook were transcribed twice by hand on separate occasions, and expressions were corrected as needed to ensure consistency with published PN expressions. In addition, this tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). **Additional validation tests may have been performed, but are as yet, undocumented.**\n",
     "\n",
     "## Author: Zach Etienne\n",
     "\n",
@@ -97,12 +96,28 @@
     "#      Buonanno, Chen, and Damour (2006):\n",
     "#     https://arxiv.org/abs/gr-qc/0508067\n",
     "def f_H_SS_2PN(m1,m2, S1U,S2U, nU, q):\n",
+    "    S0U = ixp.zerorank1()\n",
+    "    for i in range(3):\n",
+    "        S0U[i] = (1 + m2/m1)*S1U[i] + (1 + m1/m2)*S2U[i]\n",
+    "    global H_SS_2PN\n",
+    "    mu = m1*m2 / (m1 + m2)\n",
+    "    H_SS_2PN = mu/(m1 + m2) * (3*dot(S0U,nU)**2 - dot(S0U,S0U)) / (2*q**3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Second version, for validation purposes only.\n",
+    "def f_H_SS_2PNv2(m1,m2, S1U,S2U, nU, q):\n",
     "    S_0U = ixp.zerorank1()\n",
     "    for i in range(3):\n",
     "        S_0U[i] = (1 + m2/m1)*S1U[i] + (1 + m1/m2)*S2U[i]\n",
     "    mu = m1*m2 / (m1+m2)\n",
-    "    global H_SS_2PN\n",
-    "    H_SS_2PN = div(1,2)*mu/(m1+m2)*( 3*dot(S_0U,nU)**2 - dot(S_0U,S_0U) )/q**3"
+    "    global H_SS_2PNv2\n",
+    "    H_SS_2PNv2 = div(1,2)*mu/(m1+m2)*( 3*dot(S_0U,nU)**2 - dot(S_0U,S_0U) )/q**3"
    ]
   },
   {
@@ -143,42 +158,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f_H_SS_S1S2_3PN(m1,m2, n12U, S1U,S2U, p1U,p2U, q):\n",
-    "    def SHS2008a_HS1S2_3PN_pt1(m1,m2, n12U, S1U,S2U, p1U,p2U, q):\n",
-    "        Hpt1 = ( div(3,2)*(dot(cross(p1U,S1U),n12U)*dot(cross(p2U,S2U),n12U))  # line 1\n",
+    "# 3PN spin-spin S_1,S_2 coupling term, from Eq. 2.11 of\n",
+    "#       Steinhoff, Hergt, and Schäfer (2008a)\n",
+    "#         https://arxiv.org/abs/0712.1716\n",
+    "def f_H_SS_S1S2_3PN(m1,m2, n12U, S1U,S2U, p1U,p2U, r12):\n",
+    "    global H_SS_S1S2_3PN\n",
+    "    H_SS_S1S2_3PN = (+div(3,2)*(dot(cross(p1U,S1U),n12U)*dot(cross(p2U,S2U),n12U))\n",
+    "                     +       6*(dot(cross(p2U,S1U),n12U)*dot(cross(p1U,S2U),n12U))\n",
+    "                     -15*dot(S1U,n12U)*dot(S2U,n12U)*dot(p1U,n12U)*dot(p2U,n12U)\n",
+    "                     -3*dot(S1U,n12U)*dot(S2U,n12U)*dot(p1U,p2U)\n",
+    "                     +3*dot(S1U,p2U)*dot(S2U,n12U)*dot(p1U,n12U)\n",
+    "                     +3*dot(S2U,p1U)*dot(S1U,n12U)*dot(p2U,n12U)\n",
+    "                     +3*dot(S1U,p1U)*dot(S2U,n12U)*dot(p2U,n12U)\n",
+    "                     +3*dot(S2U,p2U)*dot(S1U,n12U)*dot(p1U,n12U)\n",
+    "                     -div(1,2)*dot(S1U,p2U)*dot(S2U,p1U)\n",
+    "                     +dot(S1U,p1U)*dot(S2U,p2U)\n",
+    "                     -3*dot(S1U,S2U)*dot(p1U,n12U)*dot(p2U,n12U)\n",
+    "                     +div(1,2)*dot(S1U,S2U)*dot(p1U,p2U))/(2*m1*m2*r12**3)\n",
+    "    H_SS_S1S2_3PN+= (-dot(cross(p1U,S1U),n12U)*dot(cross(p1U,S2U),n12U)\n",
+    "                     +dot(S1U,S2U)*dot(p1U,n12U)**2\n",
+    "                     -dot(S1U,n12U)*dot(S2U,p1U)*dot(p1U,n12U))*3/(2*m1**2*r12**3)\n",
+    "    H_SS_S1S2_3PN+= (-dot(cross(p2U,S2U),n12U)*dot(cross(p2U,S1U),n12U)\n",
+    "                     +dot(S1U,S2U)*dot(p2U,n12U)**2\n",
+    "                     -dot(S2U,n12U)*dot(S1U,p1U)*dot(p2U,n12U))*3/(2*m2**2*r12**3)\n",
+    "    H_SS_S1S2_3PN+= (+dot(S1U,S2U)-2*dot(S1U,n12U)*dot(S2U,n12U))*6*(m1+m2)/r12**4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Second version, for validation purposes only.\n",
+    "def f_H_SS_S1S2_3PNv2(m1,m2, n12U, S1U,S2U, p1U,p2U, q):\n",
+    "    def SHS2008a_HS1S2_3PNv2_pt1(m1,m2, n12U, S1U,S2U, p1U,p2U, q):\n",
+    "        Hpt1 = ( +div(3,2)*(dot(cross(p1U,S1U),n12U)*dot(cross(p2U,S2U),n12U)) # line 1\n",
     "                 +6 *dot(cross(p2U,S1U),n12U)*dot(cross(p1U,S2U),n12U)         # line 1\n",
     "                 -15*dot(S1U,n12U)*dot(S2U,n12U)*dot(p1U,n12U)*dot(p2U,n12U)   # line 2\n",
     "                 -3*dot(S1U,n12U)*dot(S2U,n12U)*dot(p1U,p2U)                   # line 2\n",
     "                 +3*dot(S1U,p2U)*dot(S2U,n12U)*dot(p1U,n12U) # line 3\n",
     "                 +3*dot(S2U,p1U)*dot(S1U,n12U)*dot(p2U,n12U) # line 3\n",
-    "                 +3*dot(S1U,p1U)*dot(S2U,n12U)*dot(p1U,n12U) # line 3\n",
-    "                 +3*dot(S2U,p2U)*dot(S1U,n12U)*dot(p1U,n12U)                     # line 4\n",
-    "                 -div(1,2)*dot(S1U,p2U)*dot(S2U,p1U) + dot(S1U,p1U)*dot(S2U,p2U) # line 4\n",
+    "                 +3*dot(S1U,p1U)*dot(S2U,n12U)*dot(p2U,n12U) # line 3\n",
+    "                 +3*dot(S2U,p2U)*dot(S1U,n12U)*dot(p1U,n12U) # line 4\n",
+    "                 -div(1,2)*dot(S1U,p2U)*dot(S2U,p1U)         # line 4\n",
+    "                 +dot(S1U,p1U)*dot(S2U,p2U)                  # line 4\n",
     "                 -3*dot(S1U,S2U)*dot(p1U,n12U)*dot(p2U,n12U)            # line 5\n",
     "                 +div(1,2)*dot(S1U,S2U)*dot(p1U,p2U) )/(2*m1*m2*q**3)   # line 5\n",
     "        return Hpt1\n",
-    "    def SHS2008a_HS1S2_3PN_pt2(m1,m2, n12U, S1U,S2U, p1U,p2U, q):\n",
+    "    def SHS2008a_HS1S2_3PNv2_pt2(m1,m2, n12U, S1U,S2U, p1U,p2U, q):\n",
     "        Hpt2 = ( -dot(cross(p1U,S1U),n12U)*dot(cross(p1U,S2U),n12U)                # line 6\n",
     "                 +dot(S1U,S2U)*dot(p1U,n12U)**2                                    # line 6\n",
     "                 -dot(S1U,n12U)*dot(S2U,p1U)*dot(p1U,n12U) )*div(3,2)/(m1**2*q**3) # line 6\n",
     "        return Hpt2\n",
-    "    def SHS2008a_HS1S2_3PN_pt3(m1,m2, n12U, S1U,S2U, p1U,p2U, q):\n",
-    "        Hpt3 = ( -dot(cross(p2U,S2U),n12U)*dot(cross(p2U,S2U),n12U)                # line 7\n",
+    "    def SHS2008a_HS1S2_3PNv2_pt3(m1,m2, n12U, S1U,S2U, p1U,p2U, q):\n",
+    "        Hpt3 = ( -dot(cross(p2U,S2U),n12U)*dot(cross(p2U,S1U),n12U)                # line 7\n",
     "                 +dot(S1U,S2U)*dot(p2U,n12U)**2                                    # line 7\n",
     "                 -dot(S2U,n12U)*dot(S1U,p1U)*dot(p2U,n12U) )*div(3,2)/(m2**2*q**3) # line 7\n",
     "        return Hpt3\n",
-    "    def SHS2008a_HS1S2_3PN_pt4(m1,m2, n12U, S1U,S2U, p1U,p2U, q):\n",
+    "    def SHS2008a_HS1S2_3PNv2_pt4(m1,m2, n12U, S1U,S2U, p1U,p2U, q):\n",
     "        Hpt4 = ( dot(S1U,S2U) - 2*dot(S1U,n12U)*dot(S2U,n12U) ) * 6*(m1+m2)/q**4   # line 8\n",
     "        return Hpt4\n",
-    "    global H_SS_S1S2_3PN\n",
-    "    H_SS_S1S2_3PN = ( +SHS2008a_HS1S2_3PN_pt1(m1,m2, n12U, S1U,S2U, p1U,p2U, q) \n",
-    "                      +SHS2008a_HS1S2_3PN_pt2(m1,m2, n12U, S1U,S2U, p1U,p2U, q) \n",
-    "                      +SHS2008a_HS1S2_3PN_pt3(m1,m2, n12U, S1U,S2U, p1U,p2U, q) \n",
-    "                      +SHS2008a_HS1S2_3PN_pt4(m1,m2, n12U, S1U,S2U, p1U,p2U, q) )"
+    "    global H_SS_S1S2_3PNv2\n",
+    "    H_SS_S1S2_3PNv2 = ( +SHS2008a_HS1S2_3PNv2_pt1(m1,m2, n12U, S1U,S2U, p1U,p2U, q) \n",
+    "                        +SHS2008a_HS1S2_3PNv2_pt2(m1,m2, n12U, S1U,S2U, p1U,p2U, q) \n",
+    "                        +SHS2008a_HS1S2_3PNv2_pt3(m1,m2, n12U, S1U,S2U, p1U,p2U, q) \n",
+    "                        +SHS2008a_HS1S2_3PNv2_pt4(m1,m2, n12U, S1U,S2U, p1U,p2U, q) )"
    ]
   },
   {
@@ -218,32 +267,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f_H_SS_S1sq_S2sq_3PN(m1,m2, n12U,n21U, S1U,S2U, p1U,p2U, q):\n",
-    "    def SHS2008b_HSsq_3PN_pt(m1,m2, n12U, S1U, p1U,p2U, q):\n",
-    "        H = ( +div(1,4)*m2/m1**3*dot(p1U,S1U)**2 + div(3,8)*m2/m1**3*dot(p1U,n12U)**2*dot(S1U,S1U) # line 1\n",
+    "# 3PN spin-orbit coupling term, from Eq. 9 of\n",
+    "#    Steinhoff, Hergt, and Schäfer (2008b)\n",
+    "#       https://arxiv.org/abs/0809.2200\n",
+    "def f_H_SS_S1sq_S2sq_3PN(m1,m2, n12U,n21U, S1U,S2U, p1U,p2U, r12):\n",
+    "    def f_H_SS_particle(m1,m2, n12U, S1U,S2U, p1U,p2U, r12):\n",
+    "        H_SS_S1sq_S2sq_3PN_particle = (\n",
+    "            +  m2/(4*m1**3)*dot(p1U,S1U)**2\n",
+    "            +3*m2/(8*m1**3)*dot(p1U,n12U)**2*dot(S1U,S1U)\n",
+    "            -3*m2/(8*m1**3)*dot(p1U,p1U)*dot(S1U,n12U)**2\n",
+    "            -3*m2/(4*m1**3)*dot(p1U,n12U)*dot(S1U,n12U)*dot(p1U,S1U)\n",
+    "            -3/(4*m1*m2)*dot(p2U,p2U)*dot(S1U,S1U)\n",
+    "            +9/(4*m1*m2)*dot(p2U,p2U)*dot(S1U,n12U)**2\n",
+    "            +3/(4*m1**2)*dot(p1U,p2U)*dot(S1U,S1U)\n",
+    "            -9/(4*m1**2)*dot(p1U,p2U)*dot(S1U,n12U)**2\n",
+    "            -3/(2*m1**2)*dot(p1U,n12U)*dot(p2U,S1U)*dot(S1U,n12U)\n",
+    "            +3/(m1**2)  *dot(p2U,n12U)*dot(p1U,S1U)*dot(S1U,n12U)\n",
+    "            +3/(4*m1**2)*dot(p1U,n12U)*dot(p2U,n12U)*dot(S1U,S1U)\n",
+    "            -15/(4*m1**2)*dot(p1U,n12U)*dot(p2U,n12U)*dot(S1U,n12U)**2)/r12**3\n",
+    "        H_SS_S1sq_S2sq_3PN_particle+= -(+div(9,2)*dot(S1U,n12U)**2\n",
+    "                                         -div(5,2)*dot(S1U,S1U)\n",
+    "                                         +7*m2/m1*dot(S1U,n12U)**2\n",
+    "                                         -3*m2/m1*dot(S1U,S1U))*m2/r12**4\n",
+    "        return H_SS_S1sq_S2sq_3PN_particle\n",
+    "    global H_SS_S1sq_S2sq_3PN\n",
+    "    H_SS_S1sq_S2sq_3PN = (+f_H_SS_particle(m1,m2, n12U, S1U,S2U, p1U,p2U, r12)\n",
+    "                          +f_H_SS_particle(m2,m1, n21U, S2U,S1U, p2U,p1U, r12))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Second version, transcribed on a separate occasion. For validation purposes only.\n",
+    "def f_H_SS_S1sq_S2sq_3PNv2(m1,m2, n12U,n21U, S1U,S2U, p1U,p2U, q):\n",
+    "    def SHS2008b_HSsq_3PNv2_pt(m1,m2, n12U, S1U, p1U,p2U, q):\n",
+    "        H = ( +div(1,4)*m2/m1**3*dot(p1U,S1U)**2 \n",
+    "              +div(3,8)*m2/m1**3*dot(p1U,n12U)**2*dot(S1U,S1U) # line 1\n",
     "              -div(3,8)*m2/m1**3*dot(p1U,p1U)*dot(S1U,n12U)**2                                     # line 1\n",
     "              -div(3,4)*m2/m1**3*dot(p1U,n12U)*dot(S1U,n12U)*dot(p1U,S1U) # line 2\n",
     "              -div(3,4)/(m1*m2) *dot(p2U,p2U)*dot(S1U,S1U)                # line 2\n",
     "              +div(9,4)/(m1*m2) *dot(p2U,p2U)*dot(S1U,n12U)**2 # line 3\n",
     "              +div(3,4)/m1**2   *dot(p1U,p2U)*dot(S1U,S1U)     # line 3\n",
-    "              -div(3,4)/m1**2   *dot(p1U,p2U)*dot(S1U,n12U)**2 # line 3\n",
+    "              -div(9,4)/m1**2   *dot(p1U,p2U)*dot(S1U,n12U)**2 # line 3\n",
     "              -div(3,2)/m1**2   *dot(p1U,n12U)*dot(p2U,S1U)*dot(S1U,n12U) # line 4\n",
-    "              +       3/m1**2   *dot(p2U,n12U)*dot(p2U,S1U)*dot(S1U,n12U) # line 4\n",
+    "              +       3/m1**2   *dot(p2U,n12U)*dot(p1U,S1U)*dot(S1U,n12U) # line 4\n",
     "              +div(3,4)/m1**2   *dot(p1U,n12U)*dot(p2U,n12U)*dot(S1U,S1U)            # line 5\n",
     "              -div(15,4)/m1**2  *dot(p1U,n12U)*dot(p2U,n12U)*dot(S1U,n12U)**2 )/q**3 \\\n",
     "            -( +div(9,2)*dot(S1U,n12U)**2          # line 6\n",
     "               -div(5,2)*dot(S1U,S1U)              # line 6\n",
     "               +       7*m2/m1*dot(S1U,n12U)**2    # line 6\n",
-    "               -       3*m2/m1*dot(S1U,S1U) )/q**4 # line 6\n",
+    "               -       3*m2/m1*dot(S1U,S1U) )*m2/q**4 # line 6\n",
     "        return H\n",
     "\n",
-    "    global H_SS_S1sq_S2sq_3PN\n",
-    "    H_SS_S1sq_S2sq_3PN = ( +SHS2008b_HSsq_3PN_pt(m1,m2, n12U, S1U, p1U,p2U, q)   # S_1^2 term\n",
-    "                           +SHS2008b_HSsq_3PN_pt(m2,m1, n21U, S2U, p2U,p1U, q) ) # S_2^2 term"
+    "    global H_SS_S1sq_S2sq_3PNv2\n",
+    "    H_SS_S1sq_S2sq_3PNv2 = ( +SHS2008b_HSsq_3PNv2_pt(m1,m2, n12U, S1U, p1U,p2U, q)   # S_1^2 term\n",
+    "                             +SHS2008b_HSsq_3PNv2_pt(m2,m1, n21U, S2U, p2U,p1U, q) ) # S_2^2 term"
    ]
   },
   {
@@ -260,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -278,14 +363,24 @@
     "f_H_SS_S1S2_3PN(     m1,m2, n12U,      S1U,S2U, p1U,p2U, q)\n",
     "f_H_SS_S1sq_S2sq_3PN(m1,m2, n12U,n21U, S1U,S2U, p1U,p2U, q)\n",
     "\n",
+    "def error(varname):\n",
+    "    print(\"ERROR: When comparing Python module & notebook, \"+varname+\" was found not to match.\")\n",
+    "    sys.exit(1)\n",
+    "\n",
+    "# Validation against second transcription of the expressions:\n",
+    "f_H_SS_2PNv2(m1,m2, S1U,S2U, nU, q)\n",
+    "f_H_SS_S1S2_3PNv2(     m1,m2, n12U,      S1U,S2U, p1U,p2U, q)\n",
+    "f_H_SS_S1sq_S2sq_3PNv2(m1,m2, n12U,n21U, S1U,S2U, p1U,p2U, q)\n",
+    "\n",
+    "if sp.simplify(H_SS_2PN           - H_SS_2PNv2)           != 0: error(\"H_SS_2PNv2\")\n",
+    "if sp.simplify(H_SS_S1S2_3PN      - H_SS_S1S2_3PNv2)      != 0: error(\"H_SS_S1S2_3PNv2\")\n",
+    "if sp.simplify(H_SS_S1sq_S2sq_3PN - H_SS_S1sq_S2sq_3PNv2) != 0: error(\"H_SS_S1sq_S2sq_3PNv2\")\n",
+    "\n",
+    "# Validation against corresponding Python module:\n",
     "import PN_Hamiltonian_SS as HSS\n",
     "HSS.f_H_SS_2PN(m1,m2, S1U,S2U, nU, q)\n",
     "HSS.f_H_SS_S1S2_3PN(     m1,m2, n12U,      S1U,S2U, p1U,p2U, q)\n",
     "HSS.f_H_SS_S1sq_S2sq_3PN(m1,m2, n12U,n21U, S1U,S2U, p1U,p2U, q)\n",
-    "\n",
-    "def error(varname):\n",
-    "    print(\"ERROR: When comparing Python module & notebook, \"+varname+\" was found not to match.\")\n",
-    "    sys.exit(1)\n",
     "\n",
     "if sp.simplify(H_SS_2PN           - HSS.H_SS_2PN)           != 0: error(\"H_SS_2PN\")\n",
     "if sp.simplify(H_SS_S1S2_3PN      - HSS.H_SS_S1S2_3PN)      != 0: error(\"H_SS_S1S2_3PN\")\n",
@@ -308,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
