NRPyPN: PN-Hamiltonian-SSS now fully validated

--- a/NRPyPN/PN-Hamiltonian-SSS.ipynb
+++ b/NRPyPN/PN-Hamiltonian-SSS.ipynb
@@ -17,9 +17,9 @@
     "\n",
     "## This notebook constructs the spin-spin-spin coupling terms in the Hamiltonian up to and including third post-Newtonian order\n",
     "\n",
-    "**Notebook Status:** <font color='orange'><b> Self-validated </b></font>\n",
+    "**Notebook Status:** <font color='green'><b> Validated </b></font>\n",
     "\n",
-    "**Validation Notes:** This tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). **Additional validation tests may have been performed, but are as yet, undocumented. (TODO)**\n",
+    "**Validation Notes:** All expressions in this notebook were transcribed twice by hand on separate occasions, and expressions were corrected as needed to ensure consistency with published PN expressions. In addition, this tutorial notebook has been confirmed to be self-consistent with its corresponding NRPy+ module, as documented [below](#code_validation). **Additional validation tests may have been performed, but are as yet, undocumented.**\n",
     "\n",
     "## Author: Zach Etienne\n",
     "\n",
@@ -67,19 +67,19 @@
     "\n",
     "To reduce possibility of copying error, the equation for $H_{\\rm SSS, 3PN}$ is taken directly from the arXiv LaTeX source code of Eq 3.12 in [Levi and Steinhoff (2015)](https://arxiv.org/abs/1410.2601), and only mildly formatted to (1) improve presentation in Jupyter notebooks and (2) to ensure some degree of consistency in notation across different terms in other Hamiltonian notebooks:\n",
     "\\begin{align}\n",
-    "H_{\\text{SSS(BHB),\\ 3PN}}&=\\frac{1}{m_1^2r^4}\\left[\\frac{3}{2}\\left(\\mathbf{S}_{1}^2\\, \n",
+    "H_{\\text{SSS(BHB),\\ 3PN}}&=\\frac{1}{m_1^2r^4}\\left\\{\\frac{3}{2}\\left(\\mathbf{S}_{1}^2\\, \n",
     "\\mathbf{S}_{2}\\cdot\\mathbf{n}\\times\\mathbf{p}_{1}\n",
     "+\\mathbf{S}_{1}\\cdot\\mathbf{n}\\,\\mathbf{S}_{2}\\cdot\\mathbf{S}_{1}\\times\\mathbf{p}_{1}\n",
     "-5\\left(\\mathbf{S}_{1}\\cdot\\mathbf{n}\\right)^2\\mathbf{S}_{2}\\cdot\\mathbf{n}\\times\\mathbf{p}_{1}\\right.\\right.\\\\\n",
     "&\\qquad\\qquad\\quad +\\mathbf{n}\\cdot\\mathbf{S}_{1}\\times\\mathbf{S}_{2}\\left(\\mathbf{S}_{1}\\cdot\\mathbf{p}_{1}\n",
     "-5\\mathbf{S}_{1}\\cdot\\mathbf{n}\\,\\mathbf{p}_{1}\\cdot\\mathbf{n}\\right)\\\\\n",
-    "&\\qquad\\quad -\\frac{3m_1}{2m_2}\\left(\\mathbf{S}_{1}^2\\,\n",
+    "&\\qquad\\quad -\\frac{3m_1}{2m_2}\\left[\\mathbf{S}_{1}^2\\,\n",
     "\\mathbf{S}_{2}\\cdot\\mathbf{n}\\times\\mathbf{p}_2+2\\mathbf{S}_{1}\\cdot\\mathbf{n}\\,\n",
     "\\mathbf{S}_{2}\\cdot\\mathbf{S}_{1}\\times\\mathbf{p}_{2}\n",
-    "-5\\left(\\mathbf{S}_{1}\\cdot\\mathbf{n}\\right)^2\\mathbf{S}_{2}\\cdot\\mathbf{n}\\times\\mathbf{p}_{2}\\right)\\bigg)\\\\\n",
+    "-5\\left(\\mathbf{S}_{1}\\cdot\\mathbf{n}\\right)^2\\mathbf{S}_{2}\\cdot\\mathbf{n}\\times\\mathbf{p}_{2}\\right)\\bigg]\\\\\n",
     "&\\qquad\\qquad \\left.-\\mathbf{S}_{1}\\times\\mathbf{n}\\cdot\\left(\\mathbf{p}_{2}\n",
     "-\\frac{m_2}{4m_1}\\mathbf{p}_{1}\\right)\\left(\\mathbf{S}_{1}^2\n",
-    "-5\\left(\\mathbf{S}_{1}\\cdot\\mathbf{n}\\right)^2\\right)\\right]\\\\\n",
+    "-5\\left(\\mathbf{S}_{1}\\cdot\\mathbf{n}\\right)^2\\right)\\right\\}\\\\\n",
     "&\\quad+ 1\\longleftrightarrow2.\n",
     "\\end{align}"
    ]
@@ -104,24 +104,51 @@
     "# Step 1: 3PN spin-spin-spin term, from Eq. 3.12 of\n",
     "#        Levi and Steinhoff (2015):\n",
     "#     https://arxiv.org/abs/1410.2601\n",
-    "def f_H_SSS_3PN(m1,m2, n12U,n21U, S1U,S2U, p1U,p2U, q):\n",
-    "    def SHS2015_HSSS_3PN_pt(m1,m2, nU, S1U, p1U,p2U, q):\n",
+    "def f_H_SSS_3PN(m1,m2, n12U,n21U, S1U,S2U, p1U,p2U, r12):\n",
+    "    def f_H_SSS_3PN_pt(m1,m2, nU, S1U,S2U, p1U,p2U, r):\n",
+    "        p2_minus_m2_over_4m1_p1  = ixp.zerorank1()        \n",
+    "        for i in range(3):\n",
+    "            p2_minus_m2_over_4m1_p1[i]  = p2U[i] - m2/(4*m1)*p1U[i]\n",
+    "        H_SSS_3PN_pt = (+div(3,2)*(+dot(S1U,S1U)*dot(S2U,cross(nU,p1U))\n",
+    "                                   +dot(S1U,nU)*dot(S2U,cross(S1U,p1U))\n",
+    "                                   -5*dot(S1U,nU)**2*dot(S2U,cross(nU,p1U))\n",
+    "                                   +dot(nU,cross(S1U,S2U))*(+dot(S1U,p1U)\n",
+    "                                                            -5*dot(S1U,nU)*dot(p1U,nU)))\n",
+    "                        -3*m1/(2*m2)*(  +dot(S1U,S1U)  *dot(S2U,cross(nU,p2U))\n",
+    "                                      +2*dot(S1U,nU)   *dot(S2U,cross(S1U,p2U))\n",
+    "                                      -5*dot(S1U,nU)**2*dot(S2U,cross(nU,p2U)))\n",
+    "                        -dot(cross(S1U,nU),p2_minus_m2_over_4m1_p1)*(dot(S1U,S1U) - 5*dot(S1U,nU)**2))/(m1**2*r**4)\n",
+    "        return H_SSS_3PN_pt\n",
+    "    global H_SSS_3PN\n",
+    "    H_SSS_3PN = (+f_H_SSS_3PN_pt(m1,m2, n12U, S1U,S2U, p1U,p2U, r12)\n",
+    "                 +f_H_SSS_3PN_pt(m2,m1, n21U, S2U,S1U, p2U,p1U, r12))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Second version, for validation purposes only.\n",
+    "def f_H_SSS_3PNv2(m1,m2, n12U,n21U, S1U,S2U, p1U,p2U, q):\n",
+    "    def SHS2015_HSSS_3PNv2_pt(m1,m2, nU, S1U,S2U, p1U,p2U, q):\n",
     "        p2_minus_m2_over_4m1_p1 = ixp.zerorank1()\n",
     "        for i in range(3):\n",
     "            p2_minus_m2_over_4m1_p1[i] = p2U[i] - m2/(4*m1)*p1U[i]\n",
     "        H = ( div(3,2)*(+  dot(S1U,S1U)*dot(S2U,cross(nU,p1U))   # line 1\n",
     "                        +  dot(S1U,nU)*dot(S2U,cross(S1U,p1U))   # line 1\n",
     "                        -5*dot(S1U,nU)**2*dot(S2U,cross(nU,p1U)) # line 1\n",
-    "                        +dot(nU,cross(S1U,S2U))*(dot(S1U,p1U)-5*dot(S1U,nU)*dot(p1U,nU)) # line 2\n",
+    "                        +dot(nU,cross(S1U,S2U))*(dot(S1U,p1U)-5*dot(S1U,nU)*dot(p1U,nU))) # line 2\n",
     "                        -div(3,2)*m1/m2*(+  dot(S1U,S1U)*dot(S2U,cross(nU,p2U))     # line 3\n",
     "                                         +2*dot(S1U,nU)*dot(S2U,cross(S1U,p2U))     # line 3\n",
-    "                                         -5*dot(S1U,nU)**2*dot(S2U,cross(nU,p2U)))) # line 3\n",
-    "              -dot(cross(S1U,nU), p2_minus_m2_over_4m1_p1)*(dot(S1U,S1U) - 5*dot(S1U,nU)**2) )/q**4\n",
+    "                                         -5*dot(S1U,nU)**2*dot(S2U,cross(nU,p2U))) # line 3\n",
+    "              -dot(cross(S1U,nU), p2_minus_m2_over_4m1_p1)*(dot(S1U,S1U) - 5*dot(S1U,nU)**2 ))/(m1**2*q**4)\n",
     "        return H\n",
     "\n",
-    "    global H_SSS_3PN\n",
-    "    H_SSS_3PN = (+SHS2015_HSSS_3PN_pt(m1,m2, n12U, S1U, p1U,p2U, q)\n",
-    "                 +SHS2015_HSSS_3PN_pt(m2,m1, n21U, S2U, p2U,p1U, q))"
+    "    global H_SSS_3PNv2\n",
+    "    H_SSS_3PNv2 = (+SHS2015_HSSS_3PNv2_pt(m1,m2, n12U, S1U,S2U, p1U,p2U, q)\n",
+    "                   +SHS2015_HSSS_3PNv2_pt(m2,m1, n21U, S2U,S1U, p2U,p1U, q))"
    ]
   },
   {
@@ -138,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -154,12 +181,17 @@
     "\n",
     "f_H_SSS_3PN(m1,m2, n12U,n21U, S1U,S2U, p1U,p2U, q)\n",
     "\n",
-    "import PN_Hamiltonian_SSS as HSSS\n",
-    "HSSS.f_H_SSS_3PN(m1,m2, n12U,n21U, S1U,S2U, p1U,p2U, q)\n",
-    "\n",
     "def error(varname):\n",
     "    print(\"ERROR: When comparing Python module & notebook, \"+varname+\" was found not to match.\")\n",
     "    sys.exit(1)\n",
+    "\n",
+    "# Validation against second transcription of the expressions:\n",
+    "f_H_SSS_3PNv2(m1,m2, n12U,n21U, S1U,S2U, p1U,p2U, q)\n",
+    "if sp.simplify(H_SSS_3PN - H_SSS_3PNv2) != 0: error(\"H_SSS_3PNv2\")\n",
+    "\n",
+    "# Validation against corresponding Python module:\n",
+    "import PN_Hamiltonian_SSS as HSSS\n",
+    "HSSS.f_H_SSS_3PN(m1,m2, n12U,n21U, S1U,S2U, p1U,p2U, q)\n",
     "\n",
     "if sp.simplify(H_SSS_3PN - HSSS.H_SSS_3PN) != 0: error(\"H_SSS_3PN\")\n",
     "print(\"ALL TESTS PASS\")"
@@ -180,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
