NRPyPN: PN-p_t.ipynb and PN_p_t.py: tangential component of momentum vector. Implemented and validated three ways

--- a/NRPyPN/PN-Hamiltonian-Nonspinning.ipynb
+++ b/NRPyPN/PN-Hamiltonian-Nonspinning.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "1. Part 1: [$H_{\\rm Orb,\\ NS,\\ Newt}+H_{\\rm Orb,\\ NS,\\ 1PN}+H_{\\rm Orb,\\ NS,\\ 2PN}$](#uptotwopn): Contributions up to and including second post-Newtonian order\n",
     "1. Part 2: [$H_{\\rm Orb,\\ NS,\\ 3PN}$](#threepn): Third post-Newtonian contribution\n",
-    "1. Part 3: [Validation against corresponding Python module](#code_validation)\n",
+    "1. Part 3: [Validation against second transcription and corresponding Python module](#code_validation)\n",
     "1. Part 4: [LaTeX PDF output](#latex_pdf_output): $\\LaTeX$ PDF Output"
    ]
   },
@@ -254,10 +254,12 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Part 3: Validation against corresponding Python module \\[Back to [top](#toc)\\]\n",
+    "# Part 3: Validation against second transcription and corresponding Python module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$ \n",
     "\n",
-    "As a code validation check, we verify agreement between the SymPy expressions generated in this notebook, and the corresponding Python module."
+    "As a code validation check, we verify agreement between \n",
+    "* the SymPy expressions transcribed from the cited published work on two separate occasions, and\n",
+    "* the SymPy expressions generated in this notebook, and the corresponding Python module."
    ]
   },
   {
