--- a/NRPyPN/PN-Hamiltonian-SSS.ipynb
+++ b/NRPyPN/PN-Hamiltonian-SSS.ipynb
@@ -42,7 +42,7 @@
     "$$\\label{toc}$$\n",
     "\n",
     "1. Part 1: [$H_{SSS,{\\rm 3PN}}$](#threepn), as derived in [Levi and Steinhoff (2015)](https://arxiv.org/abs/1410.2601)\n",
-    "1. Part 2: [Validation against corresponding Python module](#code_validation)\n",
+    "1. Part 2: [Validation against second transcription and corresponding Python module](#code_validation)\n",
     "1. Part 3: [LaTeX PDF output](#latex_pdf_output): $\\LaTeX$ PDF Output"
    ]
   },
@@ -157,10 +157,12 @@
    "source": [
     "<a id='code_validation'></a>\n",
     "\n",
-    "# Part 4: Validation against corresponding Python module \\[Back to [top](#toc)\\]\n",
+    "# Part 4: Validation against second transcription and corresponding Python module \\[Back to [top](#toc)\\]\n",
     "$$\\label{code_validation}$$ \n",
     "\n",
-    "As a code validation check, we verify agreement between the SymPy expressions generated in this notebook, and the corresponding Python module."
+    "As a code validation check, we verify agreement between \n",
+    "* the SymPy expressions transcribed from the cited published work on two separate occasions, and\n",
+    "* the SymPy expressions generated in this notebook, and the corresponding Python module."
    ]
   },
   {
