NRPyPN: Add MOmega expression, from https://arxiv.org/pdf/1810.00036.pdf, but with typos corrected.

--- a/NRPyPN/PN-p_t.ipynb
+++ b/NRPyPN/PN-p_t.ipynb
@@ -377,8 +377,9 @@
    "source": [
     "Putting it all together, recall that\n",
     "$$\n",
-    "p_t = \\frac{q}{(1+q)^2}\\frac{1}{r^{1/2}}\\left(1 + \\sum_{k=2}^7 \\frac{a_k}{r^{k/2}}\\right):\n",
-    "$$"
+    "p_t = \\frac{q}{(1+q)^2}\\frac{1}{r^{1/2}}\\left(1 + \\sum_{k=2}^7 \\frac{a_k}{r^{k/2}}\\right),\n",
+    "$$\n",
+    "where $k/2$ is the post-Newtonian order."
    ]
   },
   {
@@ -388,7 +389,7 @@
    "outputs": [],
    "source": [
     "# Finally, sum the expressions for a_k to construct p_t as prescribed:\n",
-    "# p_t = q/(sqrt(r)*(1+q)^2) (1 + \\sum_{k=2}^7 (a_k/r^{k/2})\n",
+    "# p_t = q/(sqrt(r)*(1+q)^2) (1 + \\sum_{k=2}^7 (a_k/r^{k/2}))\n",
     "def f_p_t(m1,m2, chi1U,chi2U, r):\n",
     "    q = m2/m1 # It is assumed that q >= 1, so m2 >= m1.\n",
     "    a = ixp.zerorank1(DIM=10)\n",
