NRPyPN: Adjust dE_GW_dt Python notebook & module, so that dM_dt can be separately computed.

--- a/NRPyPN/NRPyPN.ipynb
+++ b/NRPyPN/NRPyPN.ipynb
@@ -65,9 +65,9 @@
     "#### $H_{\\rm SSS}$, up to and including third post-Newtonian order (3PN)\n",
     "+ [$H_{SSS,{\\rm 3PN}}$](PN-Hamiltonian-SSS.ipynb), as derived in [Levi and Steinhoff (2015)](https://arxiv.org/abs/1410.2601)\n",
     "\n",
-    "### Part 2: Gravitational-Wave Flux $\\frac{dE_{\\rm GW}}{dt}$\n",
+    "### Part 2: $\\frac{dE_{\\rm GW}}{dt}$, the gravitational wave flux, and $\\frac{dM}{dt}$, the tidal energy injected into the black holes\n",
     "\n",
-    "+ [Gravitational-wave flux $\\frac{dE_{\\rm GW}}{dt}$](PN-dE_GW_dt.ipynb), as reviewed by \n",
+    "+ [Gravitational-wave and mass fluxes $\\frac{dE_{\\rm GW}}{dt}$ and $\\frac{dM}{dt}$](PN-dE_GW_dt_and_dM_dt.ipynb), as reviewed by \n",
     "    * [Blanchet (2014)](https://link.springer.com/content/pdf/10.12942/lrr-2014-2.pdf), for the nonspinning terms\n",
     "    * [Ossokine *et al* (2015)](https://arxiv.org/abs/1502.01747), including precessing spin terms\n",
     "    * [Ajith *et al* (2007)](https://arxiv.org/abs/0709.0093), including tidal-heating injected energy into the black holes [Alvi (2001)](https://arxiv.org/abs/gr-qc/0107080)\n",
