NRPyPN: Properly handle the gamma_EulerMascheroni constant, by setting it as a SymPy variable importable through NRPyPN_shortcuts.py

--- a/NRPyPN/NRPyPN_shortcuts.ipynb
+++ b/NRPyPN/NRPyPN_shortcuts.ipynb
@@ -72,7 +72,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing NRPyPN_shortcuts-validation.py\n"
+      "Overwriting NRPyPN_shortcuts-validation.py\n"
      ]
     }
    ],
@@ -122,6 +122,9 @@
     "r, q = sp.symbols('r q', real=True)\n",
     "chi1U = ixp.declarerank1('chi1U')\n",
     "chi2U = ixp.declarerank1('chi2U')\n",
+    "\n",
+    "# Euler-Mascheroni gamma constant:\n",
+    "gamma_EulerMascheroni = sp.symbols('gamma_EulerMascheroni',real=True)\n",
     "\n",
     "# Derived quantities used in Damour et al papers:\n",
     "n12U = ixp.zerorank1()\n",
@@ -230,7 +233,7 @@
     "\n",
     "# Step 3: num_eval(expr), a means to numerically evaluate SymPy/NRPyPN\n",
     "#         expressions\n",
-    "def num_eval(expr, \n",
+    "def num_eval(expr,\n",
     "             qmassratio =  1.0,  # must be >= 1\n",
     "             nr         = 12.0,  # Orbital separation\n",
     "             nchi1x     = +0.,\n",
@@ -249,7 +252,7 @@
     "    nm2   = qmassratio/(1+qmassratio)\n",
     "    # This way nm1+nm2 = (qmassratio+1)/(1+qmassratio) = 1 CHECK\n",
     "    #      and nm2/nm1 = qmassratio                        CHECK\n",
-    "    \n",
+    "\n",
     "    nS1U0 = nchi1x*nm1**2\n",
     "    nS1U1 = nchi1y*nm1**2\n",
     "    nS1U2 = nchi1z*nm1**2\n",
@@ -269,7 +272,8 @@
     ".subs(S2U[0],nS2U0).subs(S2U[1],nS2U1).subs(S2U[2],nS2U2)\\\n",
     ".subs(chi1U[0],nchi1x).subs(chi1U[1],nchi1y).subs(chi1U[2],nchi1z)\\\n",
     ".subs(chi2U[0],nchi2x).subs(chi2U[1],nchi2y).subs(chi2U[2],nchi2z)\\\n",
-    ".subs(r,nr).subs(q,nr).subs(sp.pi,sp.N(sp.pi))"
+    ".subs(r,nr).subs(q,nr).subs(sp.pi,sp.N(sp.pi)\\\n",
+    ".subs(gamma_EulerMascheroni,0.5772156649015328606065120900824024310421))"
    ]
   },
   {
